--- a/stylo.css
+++ b/stylo.css
@@ -1,30 +1,55 @@
 *{
-margin:0;
-padding:0;
-border:0;
 font-size:inherit;
 font-weight:inherit;
 font-family:inherit;
 font-style:inherit;
-text-decoration:inherit;
 line-height:inherit;
 color:inherit;
-box-sizing: border-box;
+text-decoration: none;
+}
+html{
+  min-height: 100vh;
+  min-width: 100vw;
+}
+body{
+display: flex;
+justify-content: center;
+  }
+nav{
+
 }
 
-#face{
-  margin: 0 auto;
-  text-align: center;
-  line-height: 2;
+ul{
+  width: 90%;
+  height: 15%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%vh;
+  flex-direction: row;
+  justify-content: space-between;
+  text-decoration: none;
+  list-style-type: none;
 }
+li{
+text-decoration: none;
+}
+
+section{
+  line-height: 2;
+  text-align: center;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+#face{
+width: 500px;
+/*outline: 2px solid aquaMarine;*/
+padding: 5px;
+justify-content: space-around;
+}
+
 
 #face img{
-/*  margin: 0 auto;*/
   width: 250px;
   border-radius: 50%;
 
