--- a/stylo.css
+++ b/stylo.css
@@ -12,40 +12,47 @@ text-decoration: none;
 html{
   min-height: 100vh;
   min-width: 100vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 body{
   height: 100vh;
-  width: 100vw;
-  position: absolute;
+  width: 95vw;
   bottom: 0;
-display: flex;
-justify-content: center;
-background-color: #E1E1E1;
-border-image: url(Spidey_SonyWonder.jpg) 0.5 round;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: #E1E1E1;
+  border-image: url(Spidey_SonyWonder.jpg) 0.5 round;
   }
 nav{
+  width: 60vw;
   font-family: Dosis;
   letter-spacing: 2px;
+  margin: auto;
   color:#fff;
   border-top: 0;
   border-left: 0;
   border-right: 0;
+  border-bottom: 2px solid white;
+  //background-clip:content-box;
   border-image: url(Spidey_SonyWonder.jpg) 0.5 round;
 }
 
 ul{
-  width: 90%;
-  height: 15%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  width: 50vw;
+  height: 5vh;
   text-decoration: none;
   list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 ul li{
 text-shadow: 3px 5px 10px grey;
 text-decoration: none;
-font-weight: 200;
 font-size: 20px;
 /*transition: text-shadow .5s;*/
 }
@@ -53,10 +60,7 @@ font-size: 20px;
 section{
   text-align: center;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
+
 }
 
 header p{
@@ -79,21 +83,19 @@ header h1{
 }
 
 #face{
-width: 500px;
+/*width: 500px;*/
 height: 60vh;
-padding: 5px;
 display: flex;
 justify-content: center;
 align-items: center;
-margin-top: 40px;
 }
 #bholder{
-  width:500px;
-  height: 120px;
-  flex-direction: row;
+  width:60vw;
+  height: 10vh;
   justify-content: space-around;
   align-self: center;
-  overflow-y: scroll;
+  margin: auto;
+  /*overflow-y: scroll;*/
   border-bottom: 0;
   border-left: 0;
   border-right: 0;
