--- a/stylo.css
+++ b/stylo.css
@@ -17,16 +17,16 @@ html{
   flex-direction: column;
 }
 body{
-//  position: fixed;
- height: auto;
-//  width: 95vw;
+/* position: fixed;*/
+  height: auto;
+/* width: 95vw;*/
   bottom: 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   background-color: black; //#3D3D47;
-//outline: 2px solid red;
+/*outline: 2px solid red;*/
   }
 nav{
   width: 100vw;
@@ -39,8 +39,8 @@ nav{
   }
 
 ul{
-  //width: 50vw;
-  //height: 5vh;
+  /*width: 50vw;*/
+  /*height: 5vh;*/
   text-decoration: none;
   list-style-type: none;
   display: flex;
@@ -58,7 +58,7 @@ font-size: 20px;
 
 section{
   text-align: center;
-  //height: 100%;
+  /*height: 100%;*/
 }
 
 
@@ -70,7 +70,7 @@ letter-spacing: 3px;
 }
 
 header h1{
-  //width: 100%;
+  /*width: 100%;*/
   font-size: 40px;
   font-weight: 600;
   letter-spacing: 4px;
@@ -88,12 +88,12 @@ height: 60vh;
 display: flex;
 justify-content: center;
 align-items: center;
-background-color: black; //#3D3D47;
+background-color: black;
 
 }
 #bholder{
   width:100vw;
-//  height: 10vh;
+  /*height: 10vh;*/
   justify-content: space-around;
   align-self: center;
   margin: auto;
@@ -106,7 +106,7 @@ background-color: black; //#3D3D47;
 #bio {
 
   text-align: center;
-  background-color: black; // #3D3D47;
+  background-color: black;
 }
 #bio p{
   justify-content: center;
