--- a/stiles.css
+++ b/stiles.css
@@ -23,6 +23,10 @@ html{
 
 nav{
   width: 100%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background: url('Images/IMG_3768.JPG') repeat fixed 100%;
+
 }
 
 nav ul{
