seeing if this is responsive at all -_-

--- a/styloRen.css
+++ b/styloRen.css
@@ -6,7 +6,7 @@ body {
   width: 100vw;
   height: 100vh;
   background: #888;
-  font-family: fantasy;
+  /*font-family: cursive;*/
   color: #444;
 }
 
