--- a/master.css
+++ b/master.css
@@ -1,8 +1,13 @@
+@import 'https://fonts.googleapis.com/css?family=Oswald';
+
+
 body{
   width: 100vw;
   height: 100%;
   background: linear-gradient(to bottom, #eafef9, skyBlue) fixed;
   color: white;
+  font-family: Oswald;
+  letter-spacing: .2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
