--- a/master.css
+++ b/master.css
@@ -18,7 +18,7 @@ body{
 
 #face{
   width: 90vw;
-  height: 30%;
+  height: 80vh;
   padding-top: 10%;
   border-right: 4px solid white;
   border-bottom: 4px solid white;
