--- a/master.css
+++ b/master.css
@@ -20,6 +20,7 @@ body{
   width: 90vw;
   height: 80vh;
   padding-top: 10%;
+  padding-bottom: 10%;
   border-right: 4px solid white;
   border-bottom: 4px solid white;
   border-radius: 15px;
@@ -84,7 +85,15 @@ body{
   padding: 5%;
   margin: 2%;
   font-size: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
+
+/*#skills p:nth-child(even){
+  color: blue;
+}*/
 
 .showing{
   width: 90%;
@@ -102,7 +111,7 @@ body{
   width: 80%;
   height: 80%;
   font-size: 30px;
-  box-shadow: 2px 2px 25px 5px white;
+  box-shadow: 2px 2px 25px 5px white inset;
   border-radius: 15px;
   text-align: center;
 }
@@ -115,8 +124,9 @@ body{
 
 #projects div{
   margin: 10%;
-  box-shadow: 2px 2px 50px 10px white;
+  box-shadow: 2px 2px 50px 10px white inset;
   border-radius: 25px;
+  padding: 1em;
 }
 
 #projects a{
