--- a/master.css
+++ b/master.css
@@ -16,21 +16,21 @@ body{
   background-size: cover;
   margin: 0;
   padding-top: 1em;
-  /*z-index: -1050;*/
+  z-index: -1050;
 }
 
 .bg1{
   position: absolute;
-  background: url('clouds.png') repeat;
-  z-index: -900000;
-  width: 100vw;
-  height: 200vh;
-  background-size: cover;
-  animation: bgMove 16s linear infinite;
+  background: url('clouds.png') 10% repeat-y;
+  z-index: -9000;
+  width: 100%;
+  height: 355%;
+  background-size: auto;
+  animation: bgMove 6s linear infinite;
 }
 @keyframes bgMove{
-	from { background-position: -1500px; }
-	to { background-position: 0px; }
+	from { background-position: 100%; }
+	to { background-position: 0; }
 }
 
 #face{
@@ -121,7 +121,7 @@ body{
 
 #about-show{
   margin-top: 1%;
-  margin-bottom: 1%;
+  margin-bottom: 10%;
   padding: 5%;
   width: 80%;
   height: 80%;
