--- a/master.css
+++ b/master.css
@@ -101,13 +101,14 @@ body{
 
 #skills{
   width: 95%;
-  padding: 5%;
+  /*padding: 5%;*/
   margin: 2%;
   font-size: 2em;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  text-shadow: 1px 1px 2px skyBlue;
 }
 
 .showing{
@@ -120,15 +121,17 @@ body{
 }
 
 #about-show{
-  margin-top: 1%;
-  margin-bottom: 10%;
-  padding: 5%;
-  width: 80%;
-  height: 80%;
+  /*margin-top: 1%;*/
+  /*margin-bottom: 10%;*/
+  /*padding: 5%;*/
+  /*width: 80%;*/
+  /*height: 80%;*/
   font-size: 30px;
   box-shadow: 2px 2px 25px 5px white inset;
   border-radius: 15px;
   text-align: center;
+  flex-basis: content;
+  text-shadow: 1px 1px 2px skyBlue;
 }
 
 #projects {
@@ -137,6 +140,7 @@ body{
   border-radius: 10px;
   width: 90vw;
   margin-top: 1em;
+  text-shadow: 1px 1px 2px skyBlue;
 }
 
 #projects div{
