--- a/master.css
+++ b/master.css
@@ -4,7 +4,8 @@
 body{
   width: 100vw;
   height: 100%;
-  background: linear-gradient(to bottom, #eafef9, skyBlue) fixed;
+  /*background: linear-gradient(to bottom, #eafef9, skyBlue) fixed;*/
+  background: url('IMG_4597.jpg');
   color: white;
   font-family: Oswald;
   letter-spacing: .2em;
