--- a/master.css
+++ b/master.css
@@ -22,12 +22,12 @@ body{
 
 .bg1{
   position: absolute;
-  background: url('clouds.png') 10% repeat-y;
+  /*background: url('clouds.png') 10% repeat-y;*/
   z-index: -9000;
   width: 100%;
   height: 355%;
   background-size: auto;
-  animation: bgMove 6s linear infinite;
+  /*animation: bgMove 6s linear infinite;*/
 }
 @keyframes bgMove{
 	from { background-position: 100%; }
