--- a/master.css
+++ b/master.css
@@ -4,8 +4,8 @@
 body{
   width: 100vw;
   height: 100%;
-  /*background: linear-gradient(to bottom, #eafef9, skyBlue) fixed;*/
-  background: url('IMG_4597.jpg');
+  background: linear-gradient(to bottom, #000, #703) fixed;
+  /*background: black;*/
   color: white;
   font-family: Oswald;
   letter-spacing: .2em;
@@ -126,7 +126,7 @@ body{
   /*width: 80%;*/
   /*height: 80%;*/
   font-size: 30px;
-  box-shadow: 2px 2px 25px 5px white inset;
+  /*box-shadow: 2px 2px 25px 5px white inset;*/
   border-radius: 15px;
   text-align: center;
   flex-basis: content;
@@ -135,15 +135,21 @@ body{
 
 #projects {
   font-size: 1em;
-  box-shadow: 2px 2px 50px 10px white inset;
-  border-radius: 10px;
   width: 90vw;
   margin-top: 1em;
   text-shadow: 1px 1px 2px skyBlue;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin: auto;
 }
 
 #projects div{
-  border-radius: 25px;
+  /*border-radius: 25px;*/
+  width: 25em;
 }
 
 #projects a{
@@ -154,6 +160,6 @@ body{
 #projects>div img{
   width: 15em;
   height:15em;
-  border-radius: 50%;
+  border-radius: .5em;
   margin: auto;
 }
