--- a/master.css
+++ b/master.css
@@ -168,7 +168,7 @@ body{
   border-radius: .5em;
   margin: auto;
 }
-h1{
+.late-fix{
   font-size: 2em;
   margin: 2em;
   border-bottom: .5px solid #ccc;
