--- a/master.css
+++ b/master.css
@@ -20,31 +20,20 @@ body{
   z-index: -1050;
 }
 
-.bg1{
-  position: absolute;
-  /*background: url('clouds.png') 10% repeat-y;*/
-  z-index: -9000;
-  width: 100%;
-  height: 355%;
-  background-size: auto;
-  /*animation: bgMove 6s linear infinite;*/
-}
-@keyframes bgMove{
-	from { background-position: 100%; }
-	to { background-position: 0; }
-}
 
 #face{
   width: 95vw;
-  /*height: 95vh;*/
+  /*height: 85vh;*/
   padding-top: 2%;
   padding-bottom: 1%;
   border-right: 4px solid white;
   border-bottom: 4px solid white;
   border-radius: 15px;
-  background: url('IMG_1263.JPG') fixed;
+  background: url('./images/IMG_1263.JPG') 100% fixed;
   background-size: cover;
   text-align: center;
+  margin-top: .5em;
+  margin-bottom: 1.5em;
   clear: both;
 }
 
@@ -116,7 +105,7 @@ body{
 }
 
 .showing{
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -131,7 +120,6 @@ body{
   width: 80%;
   height: 80%;
   font-size: 30px;
-  /*box-shadow: 2px 2px 300px 2px lightblue inset;*/
   border-radius: 15px;
   text-align: center;
   flex-basis: content;
@@ -140,13 +128,13 @@ body{
 
 #projects {
   font-size: 1em;
-  width: 90vw;
+  width: 100vw;
   margin-top: 1em;
   text-shadow: 1px 1px 2px skyBlue;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
   margin: auto;
@@ -172,6 +160,42 @@ body{
   font-size: 2em;
   margin: 2em;
   border-bottom: .5px solid #ccc;
+  border-top: .5px solid #ccc;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  background: #222;
   width: 100vw;
-
+  text-shadow: 1px 1px 2px skyBlue;
+}
+.PJ:hover{
+  cursor: sw-resize;
+}
+.homebtn{
+  font-size: 1em;
+  text-decoration: none;
+  color: white;
+  text-shadow: 1px 1px 2px skyBlue;
+}
+.homebtn:hover{
+  color: maroon;
+}
+.skillz{
+  width: 100vw;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.skillz img{
+  /*width: 10em;*/
+  height: 10em;
+}
+.bar{
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+}
+.mate{
+  transform: rotateX(900deg) rotateY(-900deg);
+  transition: transform 1.5s;
 }
