--- a/stylo.css
+++ b/stylo.css
@@ -30,6 +30,7 @@ body{
   background: url('./images/IMG_4450.JPG') 100% fixed;
   background-size: cover;
   text-align: center;
+  font-size: 2em;
   text-shadow: 1px 1px 2px black;
 }
 .contact{
@@ -38,13 +39,13 @@ body{
   padding: 3%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
 .contact img{
-  width: 15%;
-  box-shadow: 2px 2px 25px 15px lightBlue inset;
+  width: 2em;
+  box-shadow: 2px 2px 25px 15px black inset;
   border-radius: 50%;
 }
 #content{
@@ -63,13 +64,14 @@ body{
   align-items: center;
   text-align: center;
   flex-basis: content;
+  padding-top: 1em;
 }
 .nav{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100vw;
-  font-size: .5em;
+  font-size: 1em;
   top: 0;
 }
 .nav a{
@@ -77,18 +79,18 @@ body{
   color: inherit;
 }
 .nav div{
-  border: .5px solid #ccc;
   width: 8em;
   border-radius: 1em;
 }
 #myFace{
-  float: left;
+  top: 5em;
   width: 5em;
   border-radius: 50%;
 }
 .skillz{
+  margin: auto;
   top: 3em;
-  width: 100vw;
+  width: 70vw;
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -101,7 +103,7 @@ body{
   /*font-size: 1em;*/
   width: 100vw;
   margin-top: 1em;
-  text-shadow: 1px 1px 2px skyBlue;
+  text-shadow: 1px 1px 2px black;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
