why do I have to keep changing this???

--- a/stylo.css
+++ b/stylo.css
@@ -70,7 +70,7 @@ body{
   flex-direction: row;
   justify-content: space-around;
   width: 100vw;
-  font-size: 1em;
+  font-size: .6em;
   top: 0;
 }
 .nav a{
