--- a/stylo.css
+++ b/stylo.css
@@ -2,8 +2,12 @@
 
 body{
   width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, #000, #703) fixed;
+  height: 100vh;
+  background-color: black;
+  /* background-color: linear-gradient(to bottom, #030, #000) fixed; */
+  background-image: url(images/taurus.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   color: white;
   font-family: Oswald;
   letter-spacing: .2em;
