--- a/stylo.css
+++ b/stylo.css
@@ -7,7 +7,8 @@ html {
 body{
   width: 100vw;
   height: 100vh;
-  background-color: #292929;
+  background: black;
+  /* background-color: #292929; */
   /* background-color: linear-gradient(to bottom, #030, #000) fixed; */
   /* background-image: url(images/taurus.svg);
   background-repeat: no-repeat;
